# oct-image-segmentation-models

./: .gitignore  LICENSE.md  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
Matlab code/: DrawLine.m  OCTseg3.m
docker/: Dockerfile  build.sh
evaluation-scripts/: evaluate_model.py
model/: dataset_loader.py  eval_config.py  eval_helper.py  eval_model.py  eval_semantic.py  evaluation_parameters.py  model.py  readdirimages.py  train_model.py  training_config.py  training_parameters.py
oct-image-segmentation-models/common/: augmentation.py  data_generator.py  dataset_construction.py  image_database.py  mlflow_parameters.py  utils.py
oct-image-segmentation-models/models/: deeplabv3plus.py  unet.py
oct-image-segmentation-models/prediction/: prediction.py
oct-image-segmentation-models/training/: training.py  training_callbacks.py  training_parameters.py
oct_image_segmentation_models/: __init__.py
oct_image_segmentation_models/common/: __init__.py  augmentation.py  custom_losses.py  custom_metrics.py  data_generator.py  dataset.py  dataset_construction.py  dataset_loader.py  plotting.py  utils.py
oct_image_segmentation_models/evaluation/: __init__.py  evaluation.py  evaluation_parameters.py
oct_image_segmentation_models/min_path_processing/: __init__.py  graph_search.py  utils.py
oct_image_segmentation_models/models/: __init__.py  base_model.py  deeplabv3plus.py  unet.py
oct_image_segmentation_models/prediction/: prediction.py  prediction_parameters.py
processing-scripts/: evaluate_model.py
unet/: __init__.py  requirements.txt
(+42 files in other folders)
