[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="oct_image_segmentation_models"
version = "0.8.0"
description = "OCT Image Segmentation Models"
readme = "README.md"
requires-python = ">=3.8.10"
license = {file = "LICENSE.md"}
keywords = ["Image Segmentation", "Machine Learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8.10",
]
authors = [
  {name = "Bruno Alvisio"},
  {name = "Jacob Czech", email = "jacob@bioteam.net"},
  {name = "Wisdom Akpan", email = "wisdom@bioteam.net"},
]
dependencies = [
    "focal-loss==0.0.7",
    "matplotlib==3.5.2",
    "mlflow==2.0.1",
    "scikit-image==0.19.3",
    "scikit-learn==1.1.3",
    "tensorflow==2.9.0",
    "typeguard==2.13.3",
    "Surface-Distance-Based-Measures==0.1",
]

[project.optional-dependencies]
dev = [
    "black>=23",
    "pre-commit>=3",
    "build",
]

[project.urls]
homepage = "https://www.bioteam.net"
repository = "https://github.com/NIH-NEI/oct-image-segmentation-models"

[tool.setuptools.packages]
find = {}
